# integrated-info-decomp

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/_static/: theme_override.css
phyid/: _version.py  calculate.py  measures.py  utils.py
phyid/tests/: test_calculate.py  test_measures.py  test_utils.py
